--- a/blueprints/promotions-manager-azure-prod.yaml
+++ b/blueprints/promotions-manager-azure-prod.yaml
@@ -2,11 +2,11 @@ kind: blueprint
 spec_version: 1
 
 clouds:
-- azure: westeurope
+- azure 1: westeurope
 
 inputs:
 - AZURE_VM_SIZE: Standard_B2ms
-- PORT: 5000
+- PORT: 80
 - API_PORT: 5001
 - RELEASE_NUMBER: none
 - API_BUILD_NUMBER: none
@@ -28,7 +28,7 @@ applications:
     input_values:
     - API_PORT: $API_PORT
     - AZURE_VM_SIZE: $AZURE_VM_SIZE
-    - DATABASE_HOST: mongodb
+    - DATABASE_HOST: 10.10.3.4
     - RELEASE_NUMBER: $RELEASE_NUMBER
     - API_BUILD_NUMBER: $API_BUILD_NUMBER
 
