--- a/blueprints/promotions-manager-azure-prod.yaml
+++ b/blueprints/promotions-manager-azure-prod.yaml
@@ -2,7 +2,7 @@ kind: blueprint
 spec_version: 1
 
 clouds:
-- azure 1: westeurope
+- azure: westeurope
 
 inputs:
 - AZURE_VM_SIZE: Standard_B2ms
@@ -17,7 +17,8 @@ artifacts:
 - promotions-manager-api:
 
 applications:
-- promotions-manager-ui:    
+- promotions-manager-ui:   
+    instances: 2
     input_values:
     - PORT: $PORT
     - AZURE_VM_SIZE: $AZURE_VM_SIZE
@@ -25,6 +26,7 @@ applications:
     depends_on: 
     - promotions-manager-api
 - promotions-manager-api:
+    instances: 2
     input_values:
     - API_PORT: $API_PORT
     - AZURE_VM_SIZE: $AZURE_VM_SIZE
