--- a/blueprints/promotions-manager-azure-prod.yaml
+++ b/blueprints/promotions-manager-azure-prod.yaml
@@ -17,7 +17,8 @@ artifacts:
 - promotions-manager-api:
 
 applications:
-- promotions-manager-ui:   
+- promotions-manager-ui:  
+    target: vm1
     input_values:
     - PORT: $PORT
     - AZURE_VM_SIZE: $AZURE_VM_SIZE
@@ -25,6 +26,7 @@ applications:
     depends_on: 
     - promotions-manager-api
 - promotions-manager-api:
+    target: vm1
     input_values:
     - API_PORT: $API_PORT
     - AZURE_VM_SIZE: $AZURE_VM_SIZE
